2010-01-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Eric Trein:
	bug #27596: AT90s2333 is not correctly supported in avrdude.conf
	* avrdude.conf.in (at90s2333): add various STK500v2 parameters.

2010-01-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Gyorgy Szekely:
	bug #28458: Buffer line is incorrectly released for PP programmers
	* par.c (par_close): use par_setmany() rather than par_setpin()
	for PPI_AVR_BUFF.

2010-01-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Lukasz Goralczyk:
	bug #27507: SIGSEGV when using avrdragon (avrdude 5.8)
	* stk500v2.c (stk500v2_dragon_isp_initpgm): Use
	stk500v2_jtagmkII_setup/stk500v2_jtagmkII_rather than their
	jtagII counterparts, to get the private data properly
	initialized.

2010-01-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* buspirate.c: Cosmetics: remove UTF-8 dashes, adjust for 8-column
	hard tabs.

2010-01-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* buspirate.c: add $ Id $ line.
	* buspirate.h: add $ Id $ line.

2010-01-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fix a few warnings that came up recently (some of them only triggered
	by recent GCC versions).
	* config_gram.y (parse_cmdbits): "brkt possibly used uninitialized"
	(GCC errs here)
	* jtagmkII.c (jtagmkII_reset32): "status possibly used uninitialized"
	(I think GCC errs, too)
	* buspirate.c: "pointers differ in signedness" (mismatch between
	string processing and the use of "unsigned char" throughought the
	AVRDUDE API)

2010-01-01  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtagmkII.c (jtagmkII_smc_init32): replace sleep() by usleep() for
	win32 compatibility.

2009-11-09  David Hoerl <dhoerl@mac.com>

	* fileio.c: ihex2bin did not properly handle files > 64K bytes
	* usb_libusb.c: re-enabled usb_reset for Macs (no reset causes lots of failures)
	* avrdude.1: spacing issue for avr32 fixed.

2009-11-09  Michal Ludvig  <mludvig@logix.net.nz>

	* buspirate.c: Implemented reset= and speed= extended parameters.